--- a/css/style-agua.css
+++ b/css/style-agua.css
@@ -6,18 +6,77 @@
     scroll-behavior: smooth;
 }
 
-.navbarNav{
-    display: inline-block;
+
+a:hover {
+    text-decoration: underline;
+}
+
+#perfumes {
+    color: rgb(29, 29, 29);
+    font-size: 40px;
+    transition: 0.5s;
+}
+
+.navbar {
+    width: 100px;
+}
+
+.blancoFijo {
+    background-color: white;
+    transition: 0.6s ease-in;
+    min-width: 100vw;
+    position: fixed;
+    padding-bottom: 15px;
+    display: flex;
+    align-items: center;
+    gap: 25px 10px;
+    height: 20%;
+    padding: 0 40px;
+    z-index: 1;
+}
+
+#blanco {
+    width: 100vw;
+    position: fixed; 
+    padding: 0 50px;
+    z-index: 1;
+}
+
+.menuestilo {
+    font-size: 50px;
+}
+
+.blancoFijoMenu {
+    display: contents;
+    position: absolute;
+}
+
+.mdesplegado {
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 0;
+    font-size: 20px;
+}
+
+.menuestilo {
+    display: flex;
+    flex-direction: column;
+    font-size: 0.7em;
+    border-bottom: 1.5px rgb(4, 4, 4) solid;
+    width: 90%;
+    margin: auto;
 }
 
 .nav-item {
     text-align: center;
-    font-size: 10px;
 }
 
 .nav-item > a {
     font-family: 'Inter', sans-serif;
-    font-weight: 100;
+    font-weight: 300;
     color: rgb(4, 4, 4);
 }
 
@@ -26,6 +85,45 @@
     transition: 0.6s ease;
 }
 
+.navbar-brand > img {
+    width: 300px;
+    margin: 0;
+}
+
+.d-inline-block.align-text-top {
+    margin: 0;
+    padding: 0;
+}
+
+.navbar-collapse {
+    transition: 1s ease-out;
+    font-size: 20px;
+}
+
+
+.navbar-toggler-icon {
+    background-image: url(../recursos/menu.png);
+}
+
+.embed-responsive-item {
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    z-index: -1;  
+}
+
+.altura-header {
+    height: 100vh;
+}
+
+main {
+    background-color: white;
+}
+
+
 #perfumes {
     font-size: 1em;
     padding-right: 0.5em;
@@ -33,19 +131,18 @@
 }
 
 
-
 .principal > img{
   width: 100%;
   z-index: -1;
 }
 .principal > div{
-    position: absolute; top: 60%; left: 70%;;
-    width: 260px;
+    position: absolute; top: 50%; left: 70%;;
+    width: 270px;
     display: block;
     flex-direction: column;
     text-align: center;
     justify-content: center;
-    padding: 10px;
+    padding: 8px;
 }
 
 .principal > div >h3{
@@ -58,19 +155,28 @@
     color: grey;
 }
 
+#productos{
+    padding-top: 25em;
+
+}
 #productos > h2{
     display: flex;
     justify-content: center;
-    padding: 60px;
     font-size: 50px;
 }
 /* Productos */
 
-.col{
+a {
+    text-decoration: none;
+    color: black;
+}
+
+.col > a{
     justify-content: center;
     align-items: center;
+    
 }
-.col > img{
+.col > a > img{
     width: 90%;
     height: auto;
     justify-content: center;
@@ -82,11 +188,15 @@
     transition-timing-function: ease;
 }
 
-.col > img:hover{
+.col > a > img:hover{
     width: 18em;
 }
 
-.col > figcaption > h4{
+.col > a >figcaption{
+    text-decoration: none;
+}
+
+.col > a >figcaption > h4{
     font-size: 12px;
     font-weight: bold;
 }
@@ -102,7 +212,7 @@
     margin: 15px;
 }
 
-.col-6 > img{
+.col-6 >  a > img{
     width: 90%;
     height: auto;
     justify-content: center;
@@ -114,25 +224,26 @@
     transition-timing-function: ease;
 }
 
-.col-6 > img:hover{
+.col-6 > a >  img:hover{
     width: 37em;
 }
 
-.col-6 > figcaption > h4{
+.col-6 > a > figcaption > h4{
     font-size: 12px;
     font-weight: bold;
 }
 
-.col-6 > figcaption > p{
+.col-6 > a > figcaption > p{
     font-size: 13px;
     color: grey;
 }
 
-.col-3{
+.col-3 > a{ 
     justify-content: center;
     align-items: center;
+
 }
-.col-3 > img{
+.col-3 > a > img{
     width: 80%;
     height: auto;
     justify-content: center;
@@ -144,16 +255,16 @@
     transition-timing-function: ease;
 }
 
-.col-3 > img:hover{
+.col-3 > a > img:hover{
     width: 16em;
 }
 
-.col-3 > figcaption > h4{
+.col-3 >  a > figcaption > h4{
     font-size: 12px;
     font-weight: bold;
 }
 
-.col-3 > figcaption > p{
+.col-3 > a > figcaption > p{
     font-size: 13px;
     color: grey;
 }
